<resources>
    <string name="app_name">My Car</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_user_name">علی</string>
    <string name="nav_header_last_name">احمدی</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_add_alarm">اضافه کردن نوبت</string>
    <string name="menu_undone">انجام نشده ها</string>
    <string name="menu_done">انجام شده ها</string>
    <string name="menu_settings">تنظیمات</string>
    <string name="menu_exit">خروج از حساب کاربری</string>
    <string name="machine_name">پزو 206</string>
    <string name="channel_name">Notification Services</string>
    <string name="channel_description">This is Notification for all Services</string>
</resources>
