<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/top_menu"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_add_alarm"
            android:icon="@drawable/ic_add_alarm_black_24dp"
            android:title="@string/menu_add_alarm" />
        <item
            android:id="@+id/nav_undone"
            android:icon="@drawable/ic_undone_list_bulleted_black_24dp"
            android:title="@string/menu_undone" />
        <item
            android:id="@+id/nav_done"
            android:icon="@drawable/ic_done_playlist_check_black_24dp"
            android:title="@string/menu_done" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_black_24dp"
            android:title="@string/menu_settings" />
    </group>

        <group
            android:id="@+id/bottom_menu"
            android:checkableBehavior="none">
            <item
                android:id="@+id/nav_exit"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/menu_exit" />

        </group>

</menu>
